Remove overflow:scroll to stop iPad jumping to top and bottom elements.

--- a/css/_ui.less
+++ b/css/_ui.less
@@ -33,7 +33,6 @@ select, button { -webkit-tap-highlight-color:rgba(0,0,0,0); border:none; -webkit
   width:100%;
   -webkit-transform: rotateY(0deg) translateZ(0px) translateX(0%) scale(1);
   .box-sizing;
-  overflow: scroll;
   left:-100%;
 
     .content {
